src/components/styles/Cart.css
.cart-container {
  position: fixed;
  z-index: 1000;
  margin:  1vw 2.5vw;
  width: 95vw;
  height: 95vh;
  background-color: rgba(255, 255, 255, 0.6);
  backdrop-filter: blur(20px);
  top: 0;
  padding: 1.5rem;
  border-radius: 1.5rem;
}

.other-products-image {
  width: 50px;
}

.product-selected-container {
  background-color: white;
  display: flex;
  gap: 1rem;
}

.product-selected-image {
  width: 200px;
  object-fit:contain;
  border: 2px black solid;
}

.empty {

  display: flex;
  justify-content: center;
  align-items: center;
}

.empty-title {
  font-size: 10rem;
  color: rgba(0, 0, 0, 0.501);
  user-select: none;
}

.sell-button {
  width: 20px;
}

.buy-button {
  width: 20px;
}

.close-button {
  position: absolute;
  top: 20px;
  right: 20px;
  outline: none;
  border: none;
  background-color: transparent;
  cursor: pointer;
}

